# audit_metric_ai_project

./: .gitignore  README.md  cli.py  client.py  datasets.py  logger.py  pyproject.toml  requirements.txt
agent/: agent.py
context/: __init__.py  schema_context.py
docs/: project_overview.md
tools/sql/: tool.py
