[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-metric-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydomo",
    "python-dotenv",
    "pydantic-ai[google,anthropic]",
    "anthropic",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = [".venv*", "docs*", "logs*", "database*"]
